src/log/build_2025-05-30_18-15-36/behaviour_planner_pkg/stderr.log
  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/dynamic_obstacle.py", line 342
    DynamicObstacleCondition("dynamic_obstacle_is_misc", bt_instance, target_dynamic_obstacle_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/static_obstacle.py", line 104
    StaticObstacleCondition("static_obstacle_is_bike_lane_protector", bt_instance, target_static_obstacle_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/railroad_crossing.py", line 58
    SetSpeed("stop", bt_instance, 8.33, SpeedLimit.MPS, 15, start_ahead_distance=4) # param
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/traffic_light.py", line 75
    SetSpeed("Set speed to zero", bt_instance, 0.0, SpeedLimit.MPH, 15, num_points=5, start_ahead_distance=15) # params
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/traffic_sign.py", line 183
    SignCondition("sign_is_do_not_enter", bt_instance, target_sign_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

